* API refactors. * Removing requirejs as the lib loader and starting point. * Social Configuration object. * Constants are now indeed constants. Can't be overwritten. * Start up event. * Supporting app configuration overriding and extending from the host page. * Including a README.md and .editorconfig files

--- a/app/styles/view/_comment-thread.scss
+++ b/app/styles/view/_comment-thread.scss
@@ -26,6 +26,7 @@ $popover-font-size: 12px;
     .popover-title {
       padding: 5px;
       border-radius: 0;
+      @include clearfix();
 
       > img {
         float: left !important;
