* base.js: removing useless defaults * styles: several styling modifications including comments and replies * comment.hbs: modifying comment UI, including children * Readme file update

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -1,4 +1,3 @@
 @import 'sass-bootstrap/lib/mixins';
 
-// Cant's see a way of less allowing me to use it together with
-// $main-elements: div,article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary,button,input,span,strong,em,a,p;
+$main-elements: div,article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary,button,input,span,strong,em,a,p;
