--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -76,7 +76,7 @@ $headings-color:          inherit !default;
 // Iconography
 // -------------------------
 
-$icon-font-path:          "/libs/sass-bootstrap/fonts/";
+$icon-font-path:          '../libs/sass-bootstrap/fonts/';
 $icon-font-name:          "glyphicons-halflings-regular" !default;
 
 
