* Changing "glyphicon" icon classes for the new classes in use: "crafter-social-icon" and "cs-icon"

--- a/app/templates/comment.hbs
+++ b/app/templates/comment.hbs
@@ -5,7 +5,7 @@
         </div>
         <div class="comment-data">
             <header>
-                <a href="#" class="pull-right" data-action-flag title="{{flagCount}} flags"><i class="glyphicon glyphicon-flag"></i></a>
+                <a href="#" class="pull-right" data-action-flag title="{{flagCount}} flags"><i class="crafter-social-icon cs-icon-flag"></i></a>
                 <strong>{{profile.userName}}</strong> <small>{{date dateAdded}}</small>
             </header>
             <section class="comment-body">
@@ -16,15 +16,15 @@
     <footer class="comment-actions">
         <ul class="list-inline list-unstyled pull-left">
             <li>
-                <a href="#" data-action-like><i class="glyphicon glyphicon-thumbs-up"></i> Like ({{likeCount}})</a>
+                <a href="#" data-action-like><i class="crafter-social-icon cs-icon-thumbs-up"></i> Like ({{likeCount}})</a>
             </li>
             <li>
-                <a href="#" data-action-reply><i class="glyphicon glyphicon-transfer"></i> Reply ({{childCount}})</a>
+                <a href="#" data-action-reply><i class="crafter-social-icon cs-icon-transfer"></i> Reply ({{childCount}})</a>
             </li>
         </ul>
         <ul class="list-inline list-unstyled pull-right">
             <li>
-                <a href="#" data-action-><i class="glyphicon glyphicon-upload"></i> Files (0)</a>
+                <a href="#" data-action-><i class="crafter-social-icon cs-icon-upload"></i> Files (0)</a>
             </li>
         </ul>
     </footer>
