--- a/app/templates/commentable.hbs
+++ b/app/templates/commentable.hbs
@@ -2,12 +2,12 @@
     <ul>
         <li>
             <a href="#" class="action" data-action="showFullView" title="Lightbox View" data-placement="auto">
-                <i class="glyphicon glyphicon-fullscreen"></i>
+                <i class="crafter-social-icon cs-icon-fullscreen"></i>
             </a>
         </li>
         <li>
             <a href="#" class="action" data-action="showDiscussionBubble" title="View & Comment" data-placement="auto">
-                <i class="glyphicon glyphicon-comment"></i> <span class="badge">{{count}}</span>
+                <i class="crafter-social-icon cs-icon-comment"></i> <span class="badge">{{count}}</span>
             </a>
         </li>
     </ul>
