--- a/app/templates/rate-barget.hbs
+++ b/app/templates/rate-barget.hbs
@@ -3,11 +3,11 @@
         Sed ut perspiciatis unde omnis iste natus error sit.
     </p>
     <div class="form-group star-rating">
-        <i class="glyphicon glyphicon-star-empty" title="Poor"></i>
-        <i class="glyphicon glyphicon-star-empty" title="Alright"></i>
-        <i class="glyphicon glyphicon-star-empty" title="Quite Good"></i>
-        <i class="glyphicon glyphicon-star-empty" title="Real Good"></i>
-        <i class="glyphicon glyphicon-star-empty" title="Fantastic"></i>
+        <i class="crafter-social-icon cs-icon-star-empty" title="Poor"></i>
+        <i class="crafter-social-icon cs-icon-star-empty" title="Alright"></i>
+        <i class="crafter-social-icon cs-icon-star-empty" title="Quite Good"></i>
+        <i class="crafter-social-icon cs-icon-star-empty" title="Real Good"></i>
+        <i class="crafter-social-icon cs-icon-star-empty" title="Fantastic"></i>
     </div>
     <button class="btn btn-primary btn-sm pull-right">
         Submit
