* Refactors, refactors, refactors :) ** Director is now an singleton class instead of a static object ** Constants and config classes externalised ** Various base classes refactors *** Adjustments over the subclasses ** more, I can't remember :/ * Displaying child comments * Attachments * Authentication

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,9 +5,18 @@
 
 @import "fonts";
 @import 'view/view';
+
 @import "view/create-comment";
-@import 'view/comment-thread';
 @import 'view/commentable-ui';
+
 @import 'view/popover';
+
+@import 'view/modal';
 @import 'view/lightbox';
+@import 'view/auth';
+
 @import 'view/social-bar';
+
+@import "ckeditor/moono/editor";
+
+@import "dropbox";
