--- a/app/styles/view/_social-bar.scss
+++ b/app/styles/view/_social-bar.scss
@@ -185,7 +185,7 @@ $controls-theme-font-colour: #FFFFFF;
     i {
       font-size: 20px;
 
-      &.glyphicon-star {
+      &.cs-icon-star {
         color: #FFF6C6;
       }
     }
