--- a/app/templates/commentable.hbs
+++ b/app/templates/commentable.hbs
@@ -1,6 +1,11 @@
 <div class="crafter-social-view crafter-social-commentable-options">
     <ul>
         <li>
+            <a href="#" class="action" data-action="watch" title="Watch" data-placement="auto">
+                <i class="crafter-social-icon cs-icon-eye-open"></i>
+            </a>
+        </li>
+        <li>
             <a href="#" class="action" data-action="showFullView" title="Lightbox View" data-placement="auto">
                 <i class="crafter-social-icon cs-icon-fullscreen"></i>
             </a>
