--- a/app/templates/commenting.hbs
+++ b/app/templates/commenting.hbs
@@ -1,5 +1,5 @@
 <div class="textarea">
-    <textarea class="editor" rows="1"></textarea>
+    <textarea class="editor" rows="1" data-identifyme="texteditor"></textarea>
 </div>
 <div class="actions">
     <button class="reply btn btn-primary btn-xs" data-action-comment>
