--- a/app/templates/popover.hbs
+++ b/app/templates/popover.hbs
@@ -8,6 +8,11 @@
                 <i class="crafter-social-icon cs-icon-cog"></i>
             </a>
         </li>
+        <li>
+            <a data-action="refresh">
+                <i class="crafter-social-icon cs-icon-refresh"></i>
+            </a>
+        </li>
     </ul>
     <button class="close">
         <span>&times;</span>
