--- a/app/styles/view/_popover.scss
+++ b/app/styles/view/_popover.scss
@@ -3,14 +3,12 @@
 //$popover-bg: rgba(61, 61, 61, 0.9);
 $popover-font-size: 12px;
 
-.#{$app-namespace}-popover {
+.#{$app-namespace}-view.#{$app-namespace}-popover {
 
-  &, a, p {
-    font-size: $popover-font-size !important;
-  }
+  &, * { font-size: $popover-font-size; }
 
   min-width: 300px;
-  font-family: $app-font-main;
+  font-family: $font-family-sans-serif;
 
   position: absolute;
   top: 0;
@@ -18,7 +16,7 @@ $popover-font-size: 12px;
   z-index: $zindex-popover;
   display: none;
   max-width: $popover-max-width;
-  padding: 1px;
+  padding: 0;
   text-align: left; // Reset given new insertion method
   background-color: $popover-bg;
   background-clip: padding-box;
@@ -35,17 +33,6 @@ $popover-font-size: 12px;
   &.right   { margin-left: 10px; }
   &.bottom  { margin-top: 10px; }
   &.left    { margin-left: -10px; }
-
-  .popover-title {
-    margin: 0; // reset heading margin
-    padding: 8px 14px;
-    font-size: $font-size-base;
-    font-weight: normal;
-    line-height: 18px;
-    background-color: $popover-title-bg;
-    border-bottom: 1px solid darken($popover-title-bg, 5%);
-    border-radius: 5px 5px 0 0;
-  }
 
   .popover-content {
     padding: 9px 14px;
@@ -136,19 +123,34 @@ $popover-font-size: 12px;
   }
 
   > header {
-    margin: 0; // reset heading margin
-    padding: 4px 7px;
-    font-weight: normal;
-    line-height: 18px;
-    border-radius: 5px 5px 0 0;
-    min-height: 30px;
 
-    button.close {
+    $header-min-height: 30px;
+    $header-padding-horizontal: 5px;
+    $header-padding-vertical: 5px;
+    $header-line-height: $header-min-height - ($header-padding-horizontal);
+
+    margin: 0; // reset heading margin
+    padding: $header-padding-horizontal $header-padding-vertical 0;
+    font-weight: normal;
+    @include border-top-left-radius($border-radius-base);
+    @include border-top-right-radius($border-radius-base);
+    min-height: $header-min-height;
+
+    &, * { line-height: $header-line-height; }
+
+    > button.close {
       border: none;
       background: none;
-      position: relative;
-      top: -3px;
-      right: 5px;
+      position: absolute;
+      line-height: #{30 - 8}px;
+      right: 10px;
+      top: 5px;
+    }
+
+    > ul {
+      line-height: #{30 - 8}px;
+      margin: 0;
+      padding: 0;
     }
 
   }
@@ -166,6 +168,23 @@ $popover-font-size: 12px;
 
     }
 
+  }
+
+  .crafter-social-popover-status {
+    margin: 0; // reset heading margin
+    padding: 5px;
+    font-size: $font-size-small;
+    font-weight: normal;
+    line-height: 1em;
+    background-color: $popover-title-bg;
+    border: 1px solid darken($popover-title-bg, 5%);
+    border-style: solid none;
+    border-radius: 0;
+  }
+
+  .#{$app-namespace}-comment-thread {
+    overflow: auto;
+    max-height: 310px;
   }
 
 }
