* Commiting styles for ckeditor ** moono skin ** images * Uploading new stylesheets

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -15,6 +15,11 @@ $icon-item-class:         'cs-icon';
 // Iconography
 $icon-font-path:          '../libs/sass-bootstrap/fonts/' !default;
 
+// Modals
+// -------------------------
+
+$modal-backdrop-bg:           #fff !default;
+
 // End bootstrap overrides. -------------------------
 // --------------------------------------------------
 
