--- a/app/styles/view/_comment-thread.scss
+++ b/app/styles/view/_comment-thread.scss
@@ -78,12 +78,15 @@ $popover-font-size: 12px;
 
         .comment-body {
           p {
-            margin-bottom: 0;
+            margin-bottom: 5px;
 
             &:last-child {
               margin-bottom: 0;
             }
 
+          }
+          ul {
+            padding-left: 20px;
           }
         }
 
