--- a/app/styles/view/_view.scss
+++ b/app/styles/view/_view.scss
@@ -8,7 +8,7 @@
     color: $text-color;
     text-shadow: none;
     line-height: 1em;
-    text-transform: left;
+    text-align: left;
 
     width: auto;
     height: auto;
