* comment.hts: temporarily hiding reply * adding fixture for notifications

--- a/app/templates/comment.hbs
+++ b/app/templates/comment.hbs
@@ -18,7 +18,7 @@
             <li>
                 <a data-action-like><i class="crafter-social-icon cs-icon-thumbs-up"></i> Like ({{likeCount}})</a>
             </li>
-            <li>
+            <li class="hide">
                 <a data-action-reply><i class="crafter-social-icon cs-icon-transfer"></i> Reply ({{childCount}})</a>
             </li>
         </ul>
