--- a/app/styles/view/_popover.scss
+++ b/app/styles/view/_popover.scss
@@ -139,12 +139,16 @@ $popover-font-size: 12px;
     &, * { line-height: $header-line-height; }
 
     > button.close {
-      border: none;
-      background: none;
       position: absolute;
-      line-height: #{30 - 8}px;
-      right: 10px;
+      padding: 0 5px;
+      right: 5px;
       top: 5px;
+      &, * {
+        border: none;
+        background: none;
+        line-height: #{30 - 8}px;
+        font-size: 20px;
+      }
     }
 
     > ul {
