--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,8 +9,8 @@
 @import "view/create-comment";
 @import 'view/commentable-ui';
 
+@import 'view/inline';
 @import 'view/popover';
-
 @import 'view/modal';
 @import 'view/lightbox';
 @import 'view/auth';
