--- a/app/styles/view/_view.scss
+++ b/app/styles/view/_view.scss
@@ -50,6 +50,47 @@
   // Components
   @import 'sass-bootstrap/lib/component-animations';
   @import '../icons';
+  @import "sass-bootstrap/lib/dropdowns";
+
+  .dropdown-menu {
+    &.tip {
+      &:before {
+        position: absolute;
+        top: -7px;
+        left: 9px;
+        display: inline-block;
+        border-right: 7px solid transparent;
+        border-bottom: 7px solid #ccc;
+        border-left: 7px solid transparent;
+        border-bottom-color: rgba(0, 0, 0, 0.2);
+        content: '';
+      }
+      &::after {
+        position: absolute;
+        top: -6px;
+        left: 10px;
+        display: inline-block;
+        border-right: 6px solid transparent;
+        border-bottom: 6px solid #ffffff;
+        border-left: 6px solid transparent;
+        content: '';
+      }
+    }
+    &.has-icons {
+      > li {
+        > a {
+          position: relative;
+          padding-left: 30px;
+          i {
+            top: -1px;
+            left: 10px;
+            position: absolute;
+          }
+        }
+      }
+    }
+  }
+
   @import 'sass-bootstrap/lib/button-groups';
   @import 'sass-bootstrap/lib/input-groups';
   @import 'sass-bootstrap/lib/badges';
