Menu view that allows view switching and other tools

--- a/app/styles/view/_comment-thread.scss
+++ b/app/styles/view/_comment-thread.scss
@@ -87,6 +87,7 @@ $popover-font-size: 12px;
           }
           ul {
             padding-left: 20px;
+            margin-bottom: 5px;
           }
         }
 
