--- a/app/styles/view/_lightbox.scss
+++ b/app/styles/view/_lightbox.scss
@@ -19,6 +19,14 @@
           margin: 0;
         }
 
+        ul.#{$app-namespace}-view-options-view {
+          > li {
+            > a {
+              padding: 5px;
+            }
+          }
+        }
+
       }
 
       > .modal-comment-box {
