--- a/app/styles/view/_view.scss
+++ b/app/styles/view/_view.scss
@@ -82,8 +82,9 @@
           position: relative;
           padding-left: 30px;
           i {
-            top: -1px;
+            top: 5px;
             left: 10px;
+            line-height: 1;
             position: absolute;
           }
         }
