--- a/app/templates/commentable.hbs
+++ b/app/templates/commentable.hbs
@@ -6,12 +6,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="action" data-action="showFullView" title="Lightbox View" data-placement="auto">
-                <i class="crafter-social-icon cs-icon-fullscreen"></i>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="action" data-action="showDiscussionBubble" title="View & Comment" data-placement="auto">
+            <a href="#" class="action" data-action="revealDiscussion" title="View & Comment" data-placement="auto">
                 <i class="crafter-social-icon cs-icon-comment"></i> <span class="badge">{{count}}</span>
             </a>
         </li>
