--- a/app/templates/popover.hbs
+++ b/app/templates/popover.hbs
@@ -2,18 +2,7 @@
 <div class="arrow"></div>
 
 <header>
-    <ul class="list-inline list-unstyled">
-        <li>
-            <a>
-                <i class="crafter-social-icon cs-icon-cog"></i>
-            </a>
-        </li>
-        <li>
-            <a data-action="refresh">
-                <i class="crafter-social-icon cs-icon-refresh"></i>
-            </a>
-        </li>
-    </ul>
+    <div class="options-view-container"></div>
     <button class="close">
         <span>&times;</span>
     </button>
@@ -29,3 +18,28 @@
 </div>
 
 <footer class="reply-box"></footer>
+
+
+<!--
+<li role="presentation" class="dropdown-header">Positioning</li>
+<li>
+    <a>
+        <i class="crafter-social-icon cs-icon-chevron-up"></i> Top
+    </a>
+</li>
+<li>
+    <a>
+        <i class="crafter-social-icon cs-icon-chevron-right"></i> Right
+    </a>
+</li>
+<li>
+    <a>
+        <i class="crafter-social-icon cs-icon-chevron-down"></i> Bottom
+    </a>
+</li>
+<li>
+    <a>
+        <i class="crafter-social-icon cs-icon-chevron-left"></i> Left
+    </a>
+</li>
+-->
