--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@
 @import 'view/modal';
 @import 'view/lightbox';
 @import 'view/auth';
+@import 'view/view-options';
 
 @import 'view/social-bar';
 
