Template updates * likes, dislikes, unlikes, undo dislike * temporarily remove unsupported UI trash * adding class to social bar control element li

--- a/app/templates/file.hbs
+++ b/app/templates/file.hbs
@@ -1,7 +1,7 @@
 <div class="cs-file">
-    <button class="btn btn-default pull-right" data-action="detach">
+    <!--<button class="btn btn-default pull-right" data-action="detach">
         <i class="crafter-social-icon cs-icon-trash"></i>
-    </button>
+    </button>-->
     <div class="cs-file-thumb"></div>
     <div class="cs-file-info">
         <div class="cs-file-title">
