--- a/app/templates/social-bar.hbs
+++ b/app/templates/social-bar.hbs
@@ -1,6 +1,6 @@
 
 <ul class="social-utilities">
-    <li>
+    <li class="control">
         <a class="control-element">
             &nbsp;
         </a>
