--- a/app/styles/ckeditor/moono/editor.scss
+++ b/app/styles/ckeditor/moono/editor.scss
@@ -100,7 +100,7 @@
 
   .cke_top {
     border-bottom: 1px solid #b6b6b6;
-    padding: 6px 8px 2px;
+    padding: 5px 5px 0;
     white-space: normal;
     -moz-box-shadow: 0 1px 0 #fff inset;
     -webkit-box-shadow: 0 1px 0 #fff inset;
@@ -121,7 +121,7 @@
   }
 
   .cke_bottom {
-    padding: 6px 8px 2px;
+    padding: 5px 5px 0;
     position: relative;
     border-top: 1px solid #bfbfbf;
     -moz-box-shadow: 0 1px 0 #fff inset;
