--- a/app/styles/view/_social-bar.scss
+++ b/app/styles/view/_social-bar.scss
@@ -121,6 +121,12 @@ $controls-theme-font-colour: #FFFFFF;
 
       }
 
+      &.subordinate {
+        a {
+          min-width: 85px;
+        }
+      }
+
     }
   }
 
