--- a/app/styles/view/_view-options.scss
+++ b/app/styles/view/_view-options.scss
@@ -2,14 +2,18 @@
 ul.#{$app-namespace}-view-options-view {
 
   margin-bottom: 0;
-  list-style: none;
+
+  &, .dropdown-menu,
+  .dropdown-menu > li {
+    list-style: none !important;
+  }
 
   #{$html-elements} {
     font-size: $font-size-small;
   }
 
-  >li {
-    list-style-type: none;
+  > li {
+    list-style-type: none !important;
     > a {
       display: block;
     }
