editor.scss: removing shadow around the editor element view.scss: including bootstrap grid styles dropbox.scss: uploader component styles comment.js: uploader component change files.js: add classes to element
adding jquery-file-upload & wrapper component

--- a/app/styles/_dropbox.scss
+++ b/app/styles/_dropbox.scss
@@ -16,13 +16,12 @@
 
   .cs-file-upload {
     margin: 5px 0 0 0;
+    .progress {
+      margin-bottom: 0;
+    }
   }
 
   .cs-files-list & {
-
-    .cs-file-upload {
-      display: none;
-    }
 
   }
 
@@ -41,22 +40,25 @@
   font-family: 'Josefin Sans Std Light', Helvetica, sans-serif;
   margin-left: auto;
   margin-right: auto;
-  min-height: 100px;
   position: relative;
 
   &.cs-dnd-upload-supported {
+
+    min-height: 150px;
+
     &:before {
-      content: "Drag & Drop Files Here";
+      content: "...or drag & drop from your desktop";
       position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
       text-align: center;
-      padding-top: 40px;
+      padding-top: 80px;
       color: $gray-light;
       font-size: 30px;
     }
+
   }
 
   .alert.no-support {
@@ -116,6 +118,7 @@
     padding: 5px;
     text-align: center;
   }
+
   .thumbnail {
     margin-top: 10px;
 
@@ -163,4 +166,31 @@
     transform: scale(1.1);
   }
 
+}
+
+.fileinput-button {
+  position: relative;
+  overflow: hidden;
+  color: #ffffff;
+}
+
+.fileinput-button input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  opacity: 0;
+  -ms-filter: 'alpha(opacity=0)';
+  font-size: 200px;
+  direction: ltr;
+  cursor: pointer;
+}
+
+/* Fixes for IE < 8 */
+@media screen\9 {
+  .fileinput-button input {
+    filter: alpha(opacity=0);
+    font-size: 100%;
+    height: 100%;
+  }
 }
