--- a/app/styles/view/_view.scss
+++ b/app/styles/view/_view.scss
@@ -43,6 +43,7 @@
     margin-top: 0;
     margin-bottom: 0;
   }
+  @import 'sass-bootstrap/lib/grid';
   @import 'sass-bootstrap/lib/tables';
   @import 'sass-bootstrap/lib/forms';
   @import 'sass-bootstrap/lib/buttons';
