--- a/app/styles/view/_comment-thread.scss
+++ b/app/styles/view/_comment-thread.scss
@@ -40,6 +40,23 @@ $popover-font-size: 12px;
       font-size: $font-size-base;
     }*/
 
+    .comment-actions {
+
+      .vote-up-count,
+      .vote-down-count {
+        font-weight: bold;
+      }
+
+      .vote-up-count {
+        color: $brand-success;
+      }
+
+      .vote-down-count {
+        color: $brand-danger;
+      }
+
+    }
+
     .comment-flagged {
       header {
         .cs-icon-flag {
