Making SUI compatible with crafter social API 3

--- a/app/styles/view/_comment-thread.scss
+++ b/app/styles/view/_comment-thread.scss
@@ -57,6 +57,10 @@ $popover-font-size: 12px;
 
     }
 
+    .status-messages {
+      padding: 5px 0 0;
+    }
+
     .comment-flagged {
       header {
         .cs-icon-flag {
